--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,8 @@
-.widget-details .visible {
-  display: block;
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-.widget-details .hidden {
-  display: none;
+.info {
+  flex: 3;
 }
-
